feat: billing-cost-management-mcp-server (#1096)
* feature: billing-cost-management-mcp-server

* fix: address content review issues

* chore: formatting

* chore: upgrade uv to 0.8.10

* chore : fix format

* chore: pre-commit formatting

* chore: fix formatting with pre-commit

* fix: test aws service base

* fix: sql injection security findings

* fix: bandit findings

* fix: semgrep findings

* fix: precommit issues

* fix: aws pricing tools

* chore: formatting and sql check

* fix: pyright issues

* fix: pyright issues

* fix: linting errors and tests

* fix: pyright issues

* fix: test coverage

* fix: patch coverage issues

* fix: coverage issues

* fix: linting related build issue

* fix: coverage issues

* fix: coverage bump

* fix: add doc string

* fix: address comments

* update test

* fix: coverage, linting and bugs

* fix : improve test coverage

* fix: coverage and tool name

* fix : improve test coverage

* fix: COH api refactoring

* fix: CO api logic

* chore: imporve unit test coverage and address issues for billing_cost_management_mcp_server

* fix: multiple api logic

* fix: address issues in CE, COH tools

* fix: failing timestamp test

* fix:update coh helper unit test having local time issues

* chore: add ecs api in Cost Optimizer tools and bump coverage

chore: add ecs api in Cost Optimizer tools and bump coverage

chore: bump coverage

* chore(build): precommit

* fix: README and system prompt

* chore(doc): update docs

* chore(docker): update dockerfile

* chore(docker): update docker health checks

* fix: update s3 storage lens tool

* fix: linting and pyright issues

* fix: refactored CE prompts

* chore: updated comments

* chore: update README and prompts

---------

Co-authored-by: RAHUL CHINTHALA <chintrah@amazon.com>
Co-authored-by: Vivek Chittepu <chittev@amazon.com>
Co-authored-by: Alain Krok <alkrok@amazon.com>
Co-authored-by: Laith Al-Saadoon <9553966+theagenticguy@users.noreply.github.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -37,7 +37,8 @@ NOTICE                                                                    @awsla
 /src/aws-pricing-mcp-server             @nspring00 @aytech-in @s12v       @awslabs/mcp-admins
 /src/aws-serverless-mcp-server          @bx9900                           @awslabs/mcp-admins
 /src/aws-support-mcp-server             @Wook133                          @awslabs/mcp-admins
-/src/well-architected-security-mcp-server @juntinyeh                        @awslabs/mcp-admins
+/src/billing-cost-management-mcp-server @chittev @Rahul-1404              @awslabs/mcp-admins
+/src/well-architected-security-mcp-server @juntinyeh                      @awslabs/mcp-admins
 #/src/bedrock-kb-retrieval-mcp-server   @awslabs/mcp-maintainers          @awslabs/mcp-admins
 /src/cdk-mcp-server                     @jimini55                         @awslabs/mcp-admins
 /src/cfn-mcp-server                     @karamvsingh                      @awslabs/mcp-admins
